Enable copy/paste in input files

--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -30,6 +30,8 @@ input:not([type=checkbox]), textarea, select {
 	font-size:  15px;
 	line-height: 15px;
 	font-weight: bold;
+	
+	-webkit-user-select: text;
 }
 
 /* @group search */
