--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -22,7 +22,7 @@
 	@theme-dark: #07acd0;
 	@theme-highlight: #93d6e7;
 		@theme-highlight-color: #1b6777;
-		@theme-highlight-text-shadow: 0 1px 0 rgba(255,255,255,0.1);
+		@theme-highlight-text-shadow: 0 1px 0 rgba(255,255,255,0.2);
 	@theme-secondary: #2c2c2d;
 		@theme-secondary-dark: #1c1c1c;
 		
@@ -127,6 +127,7 @@ aside {
 			
 			& small, & .onright:not(.bubble) {
     			color: @white;
+    			text-shadow: none;
 			} 
 		}
 		
