--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -12,29 +12,22 @@
 @defaultTrasition : @easeOutSine;
 
 /* @group <section> */
-section{
-	position: absolute;
-	position: fixed;
+section {
+	position: absolute; /* position: fixed on iOS5 & Android 4 */
+	left:  0px;
+	top:  0px;
 	width: 100%;
-	height: inherit;
-	z-index: 0;
+	height: 100%;
 	
-	//.transform(translate3d(100%, 0, 0));
-	.transform(translate3d(320px, 0, 0));
+	.transform(translate3d(100%, 0, 0));
+	//.transform(translate3d(320px, 0, 0));
 	-webkit-backface-visibility: hidden;
 	-webkit-transition: -webkit-transform 250ms @defaultTrasition;
-}
-
-section:first-child, section.show {	
-	z-index: 1;
-	//.transform(translate3d(0%, 0, 0));
-	.transform(translate3d(0px, 0, 0));
-}
-
-section.hide {
-	z-index: 0;
-	//.transform(translate3d(-100%, 0, 0));
-	.transform(translate3d(-320px, 0, 0));
+	
+	&:first-child, &.show {	
+		.transform(translate3d(0%, 0, 0)); }
+	&.hide { 
+		.transform(translate3d(-100%, 0, 0)); }
 }
 /* @end */
 
@@ -46,6 +39,7 @@ header, footer  {
 	width: 100%;
 	height: 38px;
 	display: block;
+	
 	z-index: 2;
 	line-height: 38px;
 }
@@ -59,18 +53,19 @@ footer  {
 }
 
 header .title, footer .title  {
-	float: left;
 	margin: 0 8px;	
+	float: left;	
+	z-index: -1;
 	font-size: 1.15em;
+	font-weight: bold;
 }
 
 header .title {
 	position: absolute;
 	left: 0px;
-	width: 100%;
-	margin:0px auto;
-	z-index: -1;
+	right: 0px;
 	text-align: center;
+	display: inline-block;
 }
 
 section header a.button, section footer a.button  {
@@ -82,6 +77,64 @@ section header a.button.icon, section footer a.button.icon  {
 }
 /* @end */
 
+/* @group <nav> */
+
+nav {
+	height: inherit;
+	text-align: center;
+    	
+	& a {
+		padding: 0 3px;
+		z-index: 1000;
+		float: left;
+		
+		& .icon {
+		    font-size: 2.2em;
+		    line-height: 38px;
+		    display: inline-block;
+		    padding: 0 5px;
+}
+		
+		& abbr {
+    		position: relative;
+			bottom: 5px;
+			margin-left: 2px;
+			display: none;
+			
+			font-size: 1.05em;
+		}
+		
+		&.current abbr { display: inline; }
+	}
+	
+	& .bubble {
+    	position: relative;
+	    top:  -16px;
+	    left: -10px;
+	    margin-right: -20px;  
+	}
+}
+
+.toolbar {
+	height: 48px;
+	display: block;
+	
+	& nav { display: block; }
+	& a { padding: 0; }
+	& .icon {
+    	display: block;
+		font-size: 2.5em;
+		line-height: 48px;
+	}
+	
+	& .bubble {
+    	top:  -54px;
+	    left: 6px;
+	    padding: 1px 4px;
+	}
+}
+/* @end */
+
 /* @group <aside> */
 aside {
 	position: absolute;
@@ -90,6 +143,7 @@ aside {
 	height: auto;
 	width: 256px;
 	opacity: 0;
+	z-index: 0;
 }
 
 	aside.show {
@@ -135,9 +189,7 @@ aside {
 		}
 	
 		@media handheld, only screen and (min-width: 768px) {
-			[data-target="aside"] {
-				display: none !important;
-			}		
+			[data-target="aside"] { display: none !important; }		
 			aside { opacity: 1; }		
 			aside ~ article{
 				width: auto !important;
@@ -188,62 +240,4 @@ article {
     	font-weight: normal;
     	line-height: 1.4em;
 	}			
-/* @end */
-
-/* @group <nav> */
- 
-nav  {
-	height: inherit;
-	text-align: center;
-}
-
-	nav a {
-		display: inline-block;
-		padding: 0 6px;
-		height: inherit;
-		float: left;
-	}
-	nav .icon {
-	    font-size: 2.2em;
-	    line-height: 38px;
-	}
-	nav a abbr {
-		position: relative;
-		bottom: 5px;
-		margin-left: 2px;
-		display: none;
-		
-		font-size: 1.05em;
-	}
-	nav a.current abbr { display: inline; }
-
-
-.toolbar {
-	height: 48px;
-	display: block;
-}
-
-.toolbar a {
-	float: left;
-	padding: 0;
-}
-
-.toolbar .icon {
-	display: block;
-	font-size: 2.5em;
-	line-height: 48px;
-}
-
-nav .bubble {
-    position: relative;
-    top:  -16px;
-    left: -8px;
-    margin-right: -20px;     
-}
-
-.toolbar .bubble {
-    top:  -54px;
-    left: 6px;
-    padding: 1px 4px;
-}
 /* @end */
