Add LESS nested rules

--- a/src/stylesheets/less/Lungo.base.less
+++ b/src/stylesheets/less/Lungo.base.less
@@ -86,10 +86,9 @@ a {
 	color: #fff;
 	text-decoration: none;	
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-
-a:hover {
-	opacity: 1;
+    &:hover {
+        opacity: 1;
+    }
 }
 
 html { 
@@ -123,7 +122,6 @@ img {
 	border: 0; 
 	-ms-interpolation-mode: bicubic; 
 	vertical-align: middle;
-	
 	font-size: 0;
 }
 
