--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -22,26 +22,71 @@ section{
 	.transform(translate3d(100%, 0, 0));
 	-webkit-backface-visibility: hidden;
 	-webkit-transition: -webkit-transform 250ms @defaultTrasition;
-}
 
-section:first-child {
-	.transform(translate3d(0%, 0, 0));
-	z-index: 1;
-}
+    header, footer {
+        a.button {
+            margin: 3px 3px auto 4px;
+            &.icon  {
+                width: 17px;
+                font-size: 1.5em;
+                font-weight: normal;
+            }
+        }
+    }
 
-section.hide {
-	.transform(translate3d(-100%, 0, 0));
-	z-index: 0;
-	
-}
-section.show {
-	.transform(translate3d(0%, 0, 0));
-	 z-index: 1;
+    &.hide {
+        .transform(translate3d(-100%, 0, 0));
+        z-index: 0;
+
+    }
+
+    &.show {
+        .transform(translate3d(0%, 0, 0));
+         z-index: 1;
+    }
+
+    &:first-child {
+        .transform(translate3d(0%, 0, 0));
+        z-index: 1;
+    }
 }
 /* @end */
 
 
 /* @group <header> & <footer> */
+header  {
+	top: 0px;
+
+    .title {
+        position: absolute;
+        left: 0px;
+        width: 100%;
+        margin:0px auto;
+        text-align: center;
+        z-index: -1;
+    }
+
+    ~ article {
+          top: 40px;
+      }
+
+    ~ aside {
+          padding-top: 40px;
+      }
+}
+
+footer  {
+	bottom:0px;
+
+    ~ article {
+          bottom: 40px;
+      }
+
+    ~ aside {
+          padding-bottom: 40px;
+    }
+}
+
 header, footer  {
 	position: absolute;
 	left: 0px;
@@ -50,39 +95,12 @@ header, footer  {
 	display: block;
 	z-index: 2;
 	line-height: 38px;
-}
 
-header  {
-	top: 0px
-}
-
-footer  {
-	bottom:0px;
-}
-
-header .title, footer .title  {
-	float: left;
-	margin: 0 8px;
-	font-size: 1.3em;
-}
-
-header .title {
-	position: absolute;
-	left: 0px;
-	width: 100%;
-	margin:0px auto;
-	text-align: center;
-	z-index: -1;
-}
-
-section header a.button, section footer a.button  {
-	margin: 3px 3px auto 4px;
-}
-
-section header a.button.icon, section footer a.button.icon  {
-	width: 17px;
-	font-size: 1.5em;
-	font-weight: normal;
+    .title {
+        float: left;
+        margin: 0 8px;
+        font-size: 1.3em;
+    }
 }
 /* @end */
 
@@ -94,37 +112,29 @@ aside {
 	height: auto;
 	width: 256px;
 	opacity: 0;
-}
 
-	aside.show {
-		opacity: 1;
+    a {
+        display: block;
+       	width: 244px;
+       	height: 40px;
+       	padding: 0 6px;
+
+       	font-size: 1.1em;
+       	font-weight: bold;
+       	line-height: 40px;
+    }
+
+    .anchor {
+        font-weight: bold;
+        padding: 3px 10px 4px;
+    }
+
+	.bubble {
+    	float: right;
+		margin: 12px 4px 0 0;
 	}
 
-header ~ aside {
-	padding-top: 40px;
-}
-
-footer ~ aside {
-	padding-bottom: 40px;
-}
-
-aside ~ article {
-	.transform(translate3d(0px, 0, 0));
-	-webkit-transition: -webkit-transform 250ms @defaultTrasition;
-}
-
-aside a {
-	display: block;
-	width: 244px;
-	height: 40px;
-	padding: 0 6px;
-
-	font-size: 1.1em;
-	font-weight: bold;
-	line-height: 40px;
-}
-
-	aside .icon {
+	.icon {
 		width: 28px;
 		height: 28px;
 		float: left;
@@ -134,16 +144,16 @@ aside a {
 	    line-height: 1.0em;
 	    text-align: center;
 	}
-	
-	aside .anchor {
-		font-weight: bold;
-    	padding: 3px 10px 4px;
-	}
-	
-	aside .bubble {
-    	float: right;
-		margin: 12px 4px 0 0;
-	}
+
+    &.show {
+        opacity: 1;
+    }
+
+    ~ article {
+        .transform(translate3d(0px, 0, 0));
+        -webkit-transition: -webkit-transform 250ms @defaultTrasition;
+    }
+}
 
 @media handheld, only screen and (min-width: 768px) {
 	[data-target="aside"] {
@@ -152,12 +162,11 @@ aside a {
 
 	aside {
 		opacity: 1;
-	}
-
-	aside ~ article{
-		width: auto !important;
-    	left: 256px;
-    	right:  0px !important;
+        ~ article {
+            width: auto !important;
+            left: 256px;
+            right:  0px !important;
+        }
 	}
 }
 /* @end */
@@ -172,37 +181,41 @@ article {
 	display: block;
 	z-index: 0;
 	opacity: 0;
-}
-	
-	header ~ article { top: 40px; }	
-	
-	footer ~ article { bottom: 40px; }
 
-	article.current {
+	&.aside {
+        .transform(translate3d(256px, 0, 0));
+    }
+
+	&.current {
 		z-index: 1;
 		opacity: 1;
 	}
-	
-	article.aside { .transform(translate3d(256px, 0, 0)); }
-	
-	@media handheld, only screen and (min-width: 768px) {
-		article.aside { .transform(translate3d(0px, 0, 0)); }
-	}
-	
-	article .title {
+
+	.title {
 		font-size: 1.1em;
-		 margin: 0px 0 4px;
+		margin: 0px 0 4px;
+        .icon {
+            margin-right: 4px;
+        }
 	}
-		
-		article .title .icon { margin-right: 4px; }
-	
-	article .text {
+
+	.text {
 		margin: 4px 0 8px;
 		display: block;
     	font-size: 0.9em;
     	font-weight: normal;
     	line-height: 1.4em;
-	}			
+	}
+
+}
+
+@media handheld, only screen and (min-width: 768px) {
+    article {
+        &.aside {
+            .transform(translate3d(0px, 0, 0));
+        }
+    }
+}
 /* @end */
 
 /* @group <nav> */
@@ -210,70 +223,65 @@ nav  {
 	height: inherit;
 	text-align: center;
 	font-weight: normal;
-}
 
-nav a  {
-	display: inline-block;
-	padding: 0 6px;
-	height: inherit;
-	float: left;
-	font-size: 2.0em;
-	line-height: 38px;
-}
+    a  {
+        display: inline-block;
+        padding: 0 6px;
+        height: inherit;
+        float: left;
+        font-size: 2.0em;
+        line-height: 38px;
 
-nav .icon {
-    
-}
+        abbr {
+            position: relative;
+            bottom: 3px;
+            margin-left: 2px;
+            display: none;
+            font-size: 0.5em;
+            font-weight: bold;
+        }
 
-nav a abbr {
-	position: relative;
-	bottom: 3px;
-	margin-left: 2px;
-	display: none;
-	font-size: 0.5em;
-	font-weight: bold;
-}
+        &.current {
+            abbr {
+                display: inline;
+            }
+            /*
+            .transition(all 0.3s @easeInOutCubic);
+            */
+        }
+    }
+    .bubble {
+        position: relative;
+        top:  -10px;
+        left: -10px;
+        margin-right: -16px;
+        font-size: 0.4em;
+    }
 
-nav a.current abbr {
-	display: inline;
+    .icon {
+    }
 }
-
-/*
-nav a.current {
-	.transition(all 0.3s @easeInOutCubic);
-}
-*/
-
 
 .toolbar {
 	height: 48px;
 	display: block;
-}
 
-.toolbar a {
-	float: left;
-	padding: 0;
-	font-size: 2.2em;
-}
+    a {
+        float: left;
+        padding: 0;
+        font-size: 2.2em;
+    }
 
-.toolbar .icon {
-	display: block;
-	
-	line-height: 52px;
-}
+    .bubble {
+        top:  -60px;
+        left: 12px;
+        padding: 1px 4px;
+    }
 
-nav .bubble {
-    position: relative;
-    top:  -10px;
-    left: -10px;
-    margin-right: -16px;       
-    font-size: 0.4em;    
-}
+    .icon {
+        display: block;
 
-.toolbar .bubble {
-    top:  -60px;
-    left: 12px;
-    padding: 1px 4px;
+        line-height: 52px;
+    }
 }
-
 /* @end */
