--- a/src/stylesheets/less/Lungo.layout.list.less
+++ b/src/stylesheets/less/Lungo.layout.list.less
@@ -14,105 +14,118 @@
     font-size: 1.2em;
     line-height: 1.05em;
     font-weight: bold;
-}
-	.list li:not(.toolbar) {
-		padding: 8px 6px 8px 8px;
-		list-style-type: none;
-	}
-	
-	.list a {
+
+	a {
 	    display: block;
+
+        /* @group .arrow */
+        &.arrow {
+            &:before {
+                float: right;
+                content: ">";
+                position: relative;
+                top: 6px;
+                font-size: 16px;
+                font-family: "Courier New", Courier, mono;
+                font-weight: bold;
+            }
+        }
+        /* @end */
 	}
-	
-	.list li:not(.toolbar) img, .list li:not(.toolbar) .icon {
-		float: left;
-		width: 32px;
-		height: 32px;
-		margin-right: 6px;	
-		font-size: 36px;
-		font-weight: normal;
-	}
-	
-	.list small {
+
+	li {
+        .anchor {
+            .icon {
+                width: 14px !important;
+                height: 14px !important;
+                margin-right: 4px !important;
+                font-size:  1.3em !important;
+                line-height: 16px !important;
+            }
+
+            .bubble {
+                display: none;
+            }
+        }
+
+        &.anchor {
+            font-size: 0.75em;
+            padding: 3px 6px !important;
+        }
+
+        &:not(.toolbar) {
+            padding: 8px 6px 8px 8px;
+            list-style-type: none;
+
+            img, .icon {
+                float: left;
+                width: 32px;
+                height: 32px;
+                margin-right: 6px;
+                font-size: 36px;
+                font-weight: normal;
+            }
+
+        }
+    }
+
+	small {
 		display: block;
-		overflow: hidden;  
+		overflow: hidden;
 		white-space: nowrap;
 		text-overflow: ellipsis;
 		font-size: 0.85em;
 		font-weight: normal;
 	}
-	
-	
-	.list .icon {
+
+	.icon {
 	    display: inline-block;
 	}
-	
-	.list .tip {
+
+	.tip {
     	font-size: 0.85em;
     	font-weight: bold;
 	}
-	
-	.list .light {
+
+	.light {
     	font-size: 0.9em;
     	font-weight: normal;
 	}
 
-	.list li.anchor { 	
-		font-size: 0.75em;
-		padding: 3px 6px !important;
-	}
-		.list .anchor .icon {
-			width: 14px !important;
-			height: 14px !important;	
-			margin-right: 4px !important; 	
-			font-size:  1.3em !important;
-			line-height: 16px !important;	
-		}
+    /* @group .search */
+    .search {
+        a {
+            float: right;
+            height: 30px;
+            margin: 0px;
+            padding: 0px;
 
-		.list .anchor .bubble { display: none; }
-/* @end */
+            .icon {
+                height: 12px;
+                width: 30px;
+                margin: 0px;
+                font-size: 1.2em;
+                font-weight: normal;
+            }
+        }
 
-/* @group .search */
-.list .search input {
-	width: 88%;
+         input {
+            width: 88%;
+         }
+    }
+    /* @end */
+
+    /* @group .onright */
+    .onright {
+        font-size: 0.85em;
+
+        .icon {
+            font-size: 1.2em !important;
+            height: 12px !important;
+            width: 12px !important;
+            margin: 0px;
+        }
+    }
+    /* @end */
 }
 
-.list .search a {
-	float: right;
-	height: 30px;
-	margin: 0px;
-	padding: 0px;
-}
-
-.list .search a .icon {
-	height: 12px;
-	width: 30px;
-	margin: 0px;
-	font-size: 1.2em;
-	font-weight: normal;
-}
-/* @end */
-
-/* @group .arrow */
-.list a.arrow:before {
-	float: right;
-	content: ">";
-	position: relative;
-	top: 6px;
-	font-size: 16px;
-	font-family: "Courier New", Courier, mono;
-	font-weight: bold;
-}
-/* @end */
-
-/* @group .onright */
-.list .onright {
-	font-size: 0.85em;
-}
-	.list .onright .icon {
-    	font-size: 1.2em !important;
-    	height: 12px !important;
-    	width: 12px !important;
-    	margin: 0px;
-	}
-/* @end */
