--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -9,63 +9,63 @@
  
 @import "mixins.less";
 
-a.button {
-	display: inline-block;
-	height: 31px;
-	padding: 0 9px 0 8px;
-	color: #fff !important;
-	outline: none;
-	.user-select(none);
-	.border-radius(2px);
-	
-	background: #2c2c2d -webkit-gradient(linear,left top,left bottom,color-stop(.2, rgba(255,255,255,0.25)),color-stop(1, rgba(255,255,255,0)));
-	-webkit-box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
-	box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
-		
-	font-size: 1.0em;
-	font-weight: bold !important;
-	line-height: 32px;
-	text-align: center; 
-	text-shadow: 0 -1px 0 rgba(0,0,0,.3); 
-	text-decoration: none;
-}
+a {
+    &.button {
+        display: inline-block;
+        height: 31px;
+        padding: 0 9px 0 8px;
+        color: #fff !important;
+        outline: none;
+        .user-select(none);
+        .border-radius(2px);
 
-a.button:active {
-  -webkit-box-shadow:inset 0 1px 0 rgba(10,10,10,0.5), inset 1px 0 0 rgba(10,10,10,0.3), inset -1px 0 0 rgba(10,10,10,0.4), inset 0 -1px 0 rgba(10,10,10,0.5),inset 0 1px 5px rgba(0,0,0,0.3),0 1px 0 rgba(255,255,255, 0.3);
-  box-shadow:inset 0 1px 0 rgba(10,10,10,0.5), inset 1px 0 0 rgba(10,10,10,0.3), inset -1px 0 0 rgba(10,10,10,0.4), inset 0 -1px 0 rgba(10,10,10,0.5),inset 0 1px 5px rgba(0,0,0,0.3),0 1px 0 rgba(255,255,255, 0.3);
-}
+        background: #2c2c2d -webkit-gradient(linear,left top,left bottom,color-stop(.2, rgba(255,255,255,0.25)),color-stop(1, rgba(255,255,255,0)));
+        -webkit-box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
+        box-shadow: inset 0 1px 0 rgba(34,57,100,0.6), inset 1px 0 0 rgba(34,57,100,0.4), inset -1px 0 0 rgba(34,57,100,0.5), inset 0 -1px 0 rgba(34,57,100,0.6),inset 0 2px 0 rgba(255,255,255,.3),inset 0 0 4px rgba(255,255,255,.3),0 1px 2px rgba(0,0,0,.29);
 
-a.button:disabled, a.button.disabled {
-	background: rgba(255,255,255,0.2);
-	border: 1px solid #999;
-	color: #999 !important; 
-	.box-shadow(inset 0 -5px 5px rgba(40,40,40,0.1));	
-	text-shadow: none;
-}
+        font-size: 1.0em;
+        font-weight: bold !important;
+        line-height: 32px;
+        text-align: center;
+        text-shadow: 0 -1px 0 rgba(0,0,0,.3);
+        text-decoration: none;
 
-a.button .icon{ 
-	float: left;
-	width: 17px;
-	
-	font-size: 1.5em; 
-	font-weight: normal;
-	line-height: 32px;}
-	
-a.button.big { 
-	position: relative; 
-	height: 30px; 
-	width: 100%; 
-	margin-bottom: 4px;
-	padding: 6px 0;
-	
-	font-size: 16px;
-	line-height: 31px;
-}
-	
-a.button.big .icon {	
-	width: 20px;
-	height: 28px;
-	line-height: 32px;
-	margin-left: 0.6em; 
-	margin-right: -48px;
+        &:active {
+            -webkit-box-shadow:inset 0 1px 0 rgba(10,10,10,0.5), inset 1px 0 0 rgba(10,10,10,0.3), inset -1px 0 0 rgba(10,10,10,0.4), inset 0 -1px 0 rgba(10,10,10,0.5),inset 0 1px 5px rgba(0,0,0,0.3),0 1px 0 rgba(255,255,255, 0.3);
+            box-shadow:inset 0 1px 0 rgba(10,10,10,0.5), inset 1px 0 0 rgba(10,10,10,0.3), inset -1px 0 0 rgba(10,10,10,0.4), inset 0 -1px 0 rgba(10,10,10,0.5),inset 0 1px 5px rgba(0,0,0,0.3),0 1px 0 rgba(255,255,255, 0.3);
+        }
+
+        &.disabled, &:disabled {
+                background: rgba(255,255,255,0.2);
+                border: 1px solid #999;
+                color: #999 !important;
+                .box-shadow(inset 0 -5px 5px rgba(40,40,40,0.1));
+                text-shadow: none;
+        }
+        .icon {
+            float: left;
+            width: 17px;
+            font-size: 1.5em;
+            font-weight: normal;
+            line-height: 32px;
+        }
+
+        &.big {
+            position: relative;
+            height: 30px;
+            width: 100%;
+            margin-bottom: 4px;
+            padding: 6px 0;
+            font-size: 16px;
+            line-height: 31px;
+
+            .icon {
+                width: 20px;
+                height: 28px;
+                line-height: 32px;
+                margin-left: 0.6em;
+                margin-right: -48px;
+            }
+        }
+    }
 }
