--- a/src/stylesheets/less/Lungo.widgets.splash.less
+++ b/src/stylesheets/less/Lungo.widgets.splash.less
@@ -7,32 +7,28 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
  
-.splash{ 
+.splash {
 	text-align: center;
 	font-size: 1.2em;
-}
+    img {
+        max-width: 206px;
+        margin: 92px auto 32px;
+    }
+    h1 {
+        margin: 92px auto 16px;
 
-.splash img {
-	max-width: 206px;
-	margin: 92px auto 32px;
-}
-	
-.splash h1 {
-	margin: 92px auto 16px;
-	
-	font-size: 2.2em; 
-	font-weight: bold;
-}
-
-.splash .button.big {
-    margin-top: 16px;
-}
-
-.splash .copyright { 
-	position: fixed; 
-	width: 100%; 
-	bottom: 8px;
-	left: 0px;
-	font-size: 0.8em;
-	font-style: normal; 
+        font-size: 2.2em;
+        font-weight: bold;
+    }
+    .button.big {
+        margin-top: 16px;
+    }
+    .copyright {
+        position: fixed;
+        width: 100%;
+        bottom: 8px;
+        left: 0px;
+        font-size: 0.8em;
+        font-style: normal;
+    }
 }
