Add LESS nested rules

--- a/src/stylesheets/less/Lungo.widgets.colour.less
+++ b/src/stylesheets/less/Lungo.widgets.colour.less
@@ -9,8 +9,8 @@
 
 @import "mixins.less";
 
-a.grey,.grey{background-color:#cccccc;}
-a.grey:active{background-color:#b5b5b5;}
+a.grey,.grey{background-color: @grey;}
+a.grey:active{background-color: @grey-active;}
 a.black, .black{background-color: @black;}
 a.black:active{background-color: @black-active;}
 a.red, .red{background-color: @red;}
