--- a/src/stylesheets/less/Lungo.widgets.splash.less
+++ b/src/stylesheets/less/Lungo.widgets.splash.less
@@ -16,12 +16,13 @@
     }
     h1 {
         margin: 92px auto 16px;
-
         font-size: 2.2em;
         font-weight: bold;
     }
-    .button.big {
-        margin-top: 16px;
+    .button {
+        &.big {
+            margin-top: 16px;
+        }
     }
     .copyright {
         position: fixed;
