--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -1,37 +1,39 @@
-section{position:absolute;position:fixed;width:100%;height:inherit;z-index:0;-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0);-webkit-backface-visibility:hidden;-webkit-transition:-webkit-transform 250ms cubic-bezier(0.39, 0.575, 0.565, 1);}
-section:first-child{-webkit-transform:translate3d(0%, 0, 0);transform:translate3d(0%, 0, 0);z-index:1;}
-section.hide{-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0);z-index:0;}
-section.show{-webkit-transform:translate3d(0%, 0, 0);transform:translate3d(0%, 0, 0);z-index:1;}
-header,footer{position:absolute;left:0px;width:100%;height:38px;display:block;z-index:2;line-height:38px;}
-header{top:0px;}
-footer{bottom:0px;}
-header .title,footer .title{float:left;margin:0 8px;font-size:1.3em;}
-header .title{position:absolute;left:0px;width:100%;margin:0px auto;text-align:center;z-index:-1;}
-section header a.button,section footer a.button{margin:3px 3px auto 4px;}
-section header a.button.icon,section footer a.button.icon{width:17px;font-size:1.5em;font-weight:normal;}
-aside{position:absolute;top:0px;bottom:0px;height:auto;width:256px;opacity:0;}
-aside.show{opacity:1;}
-header~aside{padding-top:40px;}
-footer~aside{padding-bottom:40px;}
-aside~article{-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);-webkit-transition:-webkit-transform 250ms cubic-bezier(0.39, 0.575, 0.565, 1);}
-aside a{display:block;width:244px;height:40px;padding:0 6px;font-size:1.1em;font-weight:bold;line-height:40px;}
-aside .icon{width:28px;height:28px;float:left;margin:8px 6px 0 0;font-size:1.9em;line-height:1.0em;text-align:center;}
-aside .anchor{font-weight:bold;padding:3px 10px 4px;}
-aside .bubble{float:right;margin:12px 4px 0 0;}
-@media handheld, only screen and (min-width: 768px){[data-target="aside"]{display:none !important;} aside{opacity:1;} aside~article{width:auto !important;left:256px;right:0px !important;}}article{position:absolute;width:inherit;height:inherit;top:0px;bottom:0px;display:block;z-index:0;opacity:0;}
-header~article{top:40px;}
-footer~article{bottom:40px;}
-article.current{z-index:1;opacity:1;}
-article.aside{-webkit-transform:translate3d(256px, 0, 0);transform:translate3d(256px, 0, 0);}
-@media handheld, only screen and (min-width: 768px){article.aside{-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);}}article .title{font-size:1.1em;margin:0px 0 4px;}
-article .title .icon{margin-right:4px;}
-article .text{margin:4px 0 8px;display:block;font-size:0.9em;font-weight:normal;line-height:1.4em;}
-nav{height:inherit;text-align:center;font-weight:normal;}
-nav a{display:inline-block;padding:0 6px;height:inherit;float:left;font-size:2.0em;line-height:38px;}
-nav a abbr{position:relative;bottom:3px;margin-left:2px;display:none;font-size:0.5em;font-weight:bold;}
-nav a.current abbr{display:inline;}
-.toolbar{height:48px;display:block;}
-.toolbar a{float:left;padding:0;font-size:2.2em;}
-.toolbar .icon{display:block;line-height:52px;}
-nav .bubble{position:relative;top:-10px;left:-10px;margin-right:-16px;font-size:0.4em;}
-.toolbar .bubble{top:-60px;left:12px;padding:1px 4px;}
+section{position:absolute;position:fixed;width:100%;height:inherit;z-index:0;-webkit-transform:translate3d(100%,0,0);transform:translate3d(100%,0,0);-webkit-backface-visibility:hidden;-webkit-transition:-webkit-transform 250ms cubic-bezier(0.39,.575,.565,1)}
+section header a.button,section footer a.button{margin:3px 3px auto 4px}
+section header a.button.icon,section footer a.button.icon{width:17px;font-size:1.5em;font-weight:400}
+section.hide{-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0);z-index:0}
+section.show{-webkit-transform:translate3d(0%,0,0);transform:translate3d(0%,0,0);z-index:1}
+section:first-child{-webkit-transform:translate3d(0%,0,0);transform:translate3d(0%,0,0);z-index:1}
+header{top:0}
+header .title{position:absolute;left:0;width:100%;margin:0 auto;text-align:center;z-index:-1}
+header~article{top:40px}
+header~aside{padding-top:40px}
+footer{bottom:0}
+footer~article{bottom:40px}
+footer~aside{padding-bottom:40px}
+header,footer{position:absolute;left:0;width:100%;height:38px;display:block;z-index:2;line-height:38px}
+header .title,footer .title{float:left;margin:0 8px;font-size:1.3em}
+aside{position:absolute;top:0;bottom:0;height:auto;width:256px;opacity:0}
+aside a{display:block;width:244px;height:40px;padding:0 6px;font-size:1.1em;font-weight:700;line-height:40px}
+aside .anchor{font-weight:700;padding:3px 10px 4px}
+aside .bubble{float:right;margin:12px 4px 0 0}
+aside .icon{width:28px;height:28px;float:left;margin:8px 6px 0 0;font-size:1.9em;line-height:1.0em;text-align:center}
+aside.show{opacity:1}
+aside~article{-webkit-transform:translate3d(0px,0,0);transform:translate3d(0px,0,0);-webkit-transition:-webkit-transform 250ms cubic-bezier(0.39,.575,.565,1)}
+@media handheld,only screen and (min-width: 768px){[data-target="aside"]{ display:none!important}aside{opacity:1}aside~article{width:auto!important;left:256px;right:0!important}}
+article{position:absolute;width:inherit;height:inherit;top:0;bottom:0;display:block;z-index:0;opacity:0}
+article.aside{-webkit-transform:translate3d(256px,0,0);transform:translate3d(256px,0,0)}
+article.current{z-index:1;opacity:1}
+article .title{font-size:1.1em;margin:0 0 4px}
+article .title .icon{margin-right:4px}
+article .text{margin:4px 0 8px;display:block;font-size:.9em;font-weight:400;line-height:1.4em}
+@media handheld,only screen and (min-width: 768px){article.aside{ -webkit-transform:translate3d(0px,0,0);transform:translate3d(0px,0,0)}}
+nav{height:inherit;text-align:center;font-weight:400}
+nav a{display:inline-block;padding:0 6px;height:inherit;float:left;font-size:2.0em;line-height:38px}
+nav a abbr{position:relative;bottom:3px;margin-left:2px;display:none;font-size:.5em;font-weight:700}
+nav a.current abbr{display:inline}
+nav .bubble{position:relative;top:-10px;left:-10px;margin-right:-16px;font-size:.4em}
+.toolbar{height:48px;display:block}
+.toolbar a{float:left;padding:0;font-size:2.2em}
+.toolbar .bubble{top:-60px;left:12px;padding:1px 4px}
+.toolbar .icon{display:block;line-height:52px}
