--- a/src/stylesheets/css/Lungo.layout.list.css
+++ b/src/stylesheets/css/Lungo.layout.list.css
@@ -1,17 +1,17 @@
-.list{width:inherit;font-size:1.2em;line-height:1.05em;font-weight:bold;}
-.list li:not(.toolbar){padding:8px 6px 8px 8px;list-style-type:none;}
-.list a{display:block;}
-.list li:not(.toolbar) img,.list li:not(.toolbar) .icon{float:left;width:32px;height:32px;margin-right:6px;font-size:36px;font-weight:normal;}
-.list small{display:block;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:0.85em;font-weight:normal;}
-.list .icon{display:inline-block;}
-.list .tip{font-size:0.85em;font-weight:bold;}
-.list .light{font-size:0.9em;font-weight:normal;}
-.list li.anchor{font-size:0.75em;padding:3px 6px !important;}
-.list .anchor .icon{width:14px !important;height:14px !important;margin-right:4px !important;font-size:1.3em !important;line-height:16px !important;}
-.list .anchor .bubble{display:none;}
-.list .search input{width:88%;}
-.list .search a{float:right;height:30px;margin:0px;padding:0px;}
-.list .search a .icon{height:12px;width:30px;margin:0px;font-size:1.2em;font-weight:normal;}
-.list a.arrow:before{float:right;content:">";position:relative;top:6px;font-size:16px;font-family:"Courier New",Courier,mono;font-weight:bold;}
-.list .onright{font-size:0.85em;}
-.list .onright .icon{font-size:1.2em !important;height:12px !important;width:12px !important;margin:0px;}
+.list{width:inherit;font-size:1.2em;line-height:1.05em;font-weight:700}
+.list a{display:block}
+.list a.arrow:before{float:right;content:">";position:relative;top:6px;font-size:16px;font-family:"Courier New",Courier,mono;font-weight:700}
+.list li .anchor .icon{width:14px!important;height:14px!important;margin-right:4px!important;font-size:1.3em!important;line-height:16px!important}
+.list li .anchor .bubble{display:none}
+.list li.anchor{font-size:.75em;padding:3px 6px!important}
+.list li:not(.toolbar){padding:8px 6px 8px 8px;list-style-type:none}
+.list li:not(.toolbar) img,.list li:not(.toolbar) .icon{float:left;width:32px;height:32px;margin-right:6px;font-size:36px;font-weight:400}
+.list small{display:block;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:.85em;font-weight:400}
+.list .icon{display:inline-block}
+.list .tip{font-size:.85em;font-weight:700}
+.list .light{font-size:.9em;font-weight:400}
+.list .search a{float:right;height:30px;margin:0;padding:0}
+.list .search a .icon{height:12px;width:30px;margin:0;font-size:1.2em;font-weight:400}
+.list .search input{width:88%}
+.list .onright{font-size:.85em}
+.list .onright .icon{font-size:1.2em!important;height:12px!important;width:12px!important;margin:0}
