Some changes in main stylesheet

--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -7,8 +7,8 @@ header .title,footer .title{margin:0 8px;float:left;z-index:-1;font-size:1.15em;
 header .title{position:absolute;left:0px;right:0px;text-align:center;display:inline-block;}
 section header a.button,section footer a.button{margin:3px 3px auto 4px;}
 section header a.button.icon,section footer a.button.icon{width:17px;}
-nav{height:inherit;text-align:center;}nav a{padding:0 3px;z-index:1000;float:left;}nav a .icon{font-size:2.2em;line-height:38px;display:inline-block;padding:0 5px;}
-nav a abbr{position:relative;bottom:5px;margin-left:2px;display:none;font-size:1.05em;}
+nav{height:inherit;text-align:center;}nav a{padding:0 6px;z-index:1000;float:left;}nav a .icon{font-size:2.1em;line-height:38px;display:inline-block;}
+nav a abbr,nav a .description{position:relative;bottom:5px;margin-left:2px;display:none;font-size:1.0em;}
 nav a.current abbr{display:inline;}
 nav .bubble{position:relative;top:-16px;left:-10px;margin-right:-20px;}
 .toolbar{height:48px;display:block;}.toolbar nav{display:block;}
