--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -84,24 +84,22 @@ nav {
 	text-align: center;
     	
 	& a {
-		padding: 0 3px;
+		padding: 0 6px;
 		z-index: 1000;
 		float: left;
 		
 		& .icon {
-		    font-size: 2.2em;
+		    font-size: 2.1em;
 		    line-height: 38px;
 		    display: inline-block;
-		    padding: 0 5px;
-}
+		}
 		
-		& abbr {
+		& abbr, .description {
     		position: relative;
 			bottom: 5px;
 			margin-left: 2px;
 			display: none;
-			
-			font-size: 1.05em;
+			font-size: 1.0em;
 		}
 		
 		&.current abbr { display: inline; }
