--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -14,7 +14,7 @@ header {
   background-color: #91bd09;
   border-top: 1px solid #b7de3f;
   border-bottom: 1px solid #758e29;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
 footer {
   background: #2c2c2d -webkit-gradient(linear, left top, left bottom, color-stop(0.25, #2c2c2d), color-stop(1, #1c1c1c));
@@ -51,6 +51,7 @@ nav a.current, nav a:active {
 /* @group <aside> */
 aside {
   background: #252525;
+  box-shadow: inset -1px 0 4px rgba(0, 0, 0, 0.2);
 }
 aside a {
   color: #fff;
@@ -70,9 +71,6 @@ aside a .icon {
 aside .anchor {
   background: #101010;
   color: #7a7a7a;
-}
-aside  ~ article {
-  box-shadow: -1px 0px 4px #000000;
 }
 /* @end */
 /* @group .list */
@@ -145,11 +143,25 @@ aside  ~ article {
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
 }
 /* @group .button */
-a.button {
-  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.3), inset 0 2px 0px rgba(255, 255, 255, 0.2), inset 1px 0 0 rgba(0, 0, 0, 0.2), inset -1px 0 0 rgba(0, 0, 0, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
+.button {
+  border-bottom: 1px inset rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 1px;
+  border-radius: 1px;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 3px rgba(0, 0, 0, 0.2);
 }
-a.button:active {
-  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.4);
+.button:active, .button.active {
+  -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1), inset 0 0 2px rgba(0, 0, 0, 0.2);
+  border-bottom-color: rgba(0, 0, 0, 0);
+}
+header .button:active,
+footer .button:active,
+header .button:active,
+footer .button:active {
+  height: 29px;
+  position: relative;
+  top: 1px;
 }
 /* @end */
 /* @group <inputs> */
