--- a/src/stylesheets/less/Lungo.theme.pro.less
+++ b/src/stylesheets/less/Lungo.theme.pro.less
@@ -43,7 +43,7 @@ footer {
 }
 
 article { 
-	background-color: #f9f9f9; 
+	background-color: #ededed; 
 	
 	& .title {
     	color: #797979;
@@ -192,6 +192,11 @@ aside {
     	height: 29px;
 		position: relative;
 		top:  1px; 
+	}
+	
+	&.default {
+    	background: #5a5a5a;    	
+    	&:active, &.active { background: #4b4b4b; }
 	}
 }
 /* @end */
