--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -93,7 +93,7 @@ nav {
 		    display: inline-block;
 		}
 		
-		& abbr, .description {
+		& abbr {
     		position: relative;
 			bottom: 5px;
 			margin-left: 2px;
@@ -101,7 +101,7 @@ nav {
 			font-size: 1.0em;
 		}
 		
-		&.current abbr { display: inline; }
+		&.current abbr, &.active abbr { display: inline; }
 	}
 	
 	& .bubble {
