--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -124,10 +124,30 @@ nav {
 		line-height: 48px;
 	}
 	
+	&.with-labels .icon {
+    	line-height: 40px;
+		padding-bottom: 8px;
+	}
+	
 	& .bubble {
     	top:  -54px;
 	    left: 6px;
 	    padding: 1px 4px;
+	}
+	
+	& abbr {
+		position: absolute;
+		top: 34px;
+    	width: inherit;
+    	height: 12px;
+    	display: block !important;
+    	
+    	font-size: 0.9em;
+    	line-height: 12px;
+    	    	
+    	overflow: hidden;
+   		white-space: nowrap;
+  		text-overflow: ellipsis;
 	}
 }
 /* @end */
