--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -179,6 +179,7 @@ aside {
 	border-bottom: 1px inset rgba(0,0,0,0.2);		
 	.border-radius(1px);
 	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 3px rgba(0,0,0,0.2);	
+	font-weight: bold;
 	
 	&:active, &.active { 
 		-webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 0 2px rgba(0,0,0,0.2);
